syntax = "proto3";

package slicer;
option go_package = "github.com/alecks/slicer/proto";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Authenticate (AuthRequest) returns (AuthResponse); 
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  google.protobuf.Timestamp expiry = 2; 
}
